# MrNo

./: components.json  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  translate.html  vite.config.js
plugins/: baidu.js  collect.json  hack_tencent.js  hack_youdao.js  plugin_template.js
plugins/detect/: baidu.js  iciba.js  tencent.js
plugins/paragraph/: hack_360.js  hack_tencent.js  tencent.js
plugins/translate/: baidu.ai.js  baidu.js  hack_360.js  hack_tencent.js  tencent.js
plugins/utils/: decode.js  guid.js  tencent-sign.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  macos.rs  main.rs  main.rs_  tray.rs
src/components/combobox/: index.jsx
src/components/interactive/: wrapper.jsx
src/components/setting/: index.jsx
src/i18n/: index.jsx
src/i18n/locales/: en_US.json  zh_CN.json
src/storage/: configure.js  engines.js  store-impl.js
src/stores/: translate.js
src/window/settings/: index.jsx
src/window/settings/components/engine-form/: index.jsx
src/window/settings/components/engine-table/: engine-columns.jsx  engine-config-dialog.jsx  engine-data-table.jsx  engine-row-action.jsx
src/window/settings/components/layout/: index.jsx
src/window/settings/components/shortcut-table/: columns.jsx  data-table.jsx
src/window/settings/components/sidebar/: sidebar-nav.jsx
src/window/settings/pages/about/: index.jsx
src/window/settings/routes/: index.jsx
src/window/translate/: index.jsx
src/window/translate/hooks/: useGlobalShortcut.js  useSourceInput.js
(+11 files in other folders)
