[package]
name = "mrno"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "os-all",
    "clipboard-all",
    "http-all",
    "system-tray",
    "window-set-size",
    "window-unminimize",
    "window-set-title",
    "window-show",
    "window-set-focus",
    "window-hide",
    "window-create",
    "window-set-position",
    "window-close",
    "fs-all",
    "path-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "1.0.5", features = ["system-tray"] }
log = "0.4.21"
dirs = "5.0.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
once_cell = "1.19.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
